# compas_lmgc90

./: CHANGELOG.md  CMakeLists.txt  README.md  _build_conda.bat  _build_uv.bat  environment.yml  environment_win.yml  pyproject.toml
.github/workflows/: build.yml  release.yml
data/: carbcomn_vault.json
src/: lmgc90.cpp  wrap_lmgc90_compas.f90  wrap_lmgc90_compas.h
src/compas_lmgc90/: __init__.py  solver.py
temp/: contacts.py  dem_of_a_barrel_vault.py  dem_of_a_carbcomn_vault.py  dem_of_a_cross_vault.py  dem_of_a_dome.py  dem_of_a_wall.py  dem_of_an_arch.py  dem_of_an_arch_force.py  dem_of_an_arch_interactive.py
