[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "compas_lmgc90"
description = "Binding for LMGC90."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy >= 1.21.0",
    "compas >= 2",
    "compas_dem",
    "compas_viewer",
]
dynamic = ["version"]
authors = [
    { name = "Petras Vestartas", email = "petrasvestartas@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License"
]

[project.optional-dependencies]
dev = [
    "attrs >= 17.4",
    "black >= 22.12.0",
    "bump-my-version",
    "compas_invocations2",
    "invoke >= 0.14",
    "ruff",
    "sphinx_compas2_theme",
    "twine",
    "wheel",
    "scikit-build-core",
    "nanobind",
    "build",
]

[project.urls]
Homepage = "https://github.com/BlockResearchGroup/compas_lmgc90"
Repository = "https://github.com/BlockResearchGroup/compas_lmgc90"
Issues = "https://github.com/BlockResearchGroup/compas_lmgc90/issues"

# ============================================================================
# pytest configuration
# ============================================================================

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests", "src/compas_lmgc90"]
python_files = ["test_*.py", "*_test.py", "test.py"]
norecursedirs = [
    "external/*",
    "build/*",
    "dist/*",
    "*.egg-info",
    ".git",
    ".tox",
    ".env",
    ".pytest_cache",
    ".ruff_cache"
]
addopts = [
    "-ra",
    "--strict-markers",
    "--doctest-glob=*.rst",
    "--tb=short",
    "--import-mode=importlib"
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE",
    "ALLOW_BYTES",
    "NUMBER"
]

# ============================================================================
# scikit-build configuration
# ============================================================================

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
cmake.version = ">=3.15"
cmake.build-type = "Release"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/compas_lmgc90/__init__.py"

[[tool.scikit-build.overrides]]
if.platform-system = "^win32"
cmake.args = ["-G", "Ninja"]

[[tool.scikit-build.overrides]]
if.platform-system = "^darwin"
cmake.define.CMAKE_C_COMPILER = "clang"
cmake.define.CMAKE_CXX_COMPILER = "clang++"
cmake.define.CMAKE_Fortran_COMPILER = "gfortran"
#cmake.define.CMAKE_C_COMPILER = "/opt/homebrew/bin/gcc-15"
#cmake.define.CMAKE_CXX_COMPILER = "/opt/homebrew/bin/g++-15"
#cmake.define.CMAKE_Fortran_COMPILER = "/opt/homebrew/bin/gfortran"

[tool.scikit-build.cmake.define]
CMAKE_POLICY_DEFAULT_CMP0135 = "NEW"

# ============================================================================
# cibuildwheel configuration
# ============================================================================

[tool.cibuildwheel]
build-verbosity = 3
test-requires = ["numpy", "compas", "compas_dem", "pytest"]
test-command = "pytest {project}/tests || echo 'Tests skipped - requires visualization dependencies'"
build-frontend = "pip"
# AlmaLinux 8 (glibc 2.28, GCC 12). Needed because scipy >=1.17 dropped manylinux2014
# wheels — our runtime deps pull scipy, and we'd otherwise hit source builds during
# the test phase. manylinux_2_28 has scipy wheels for cp311..cp314.
manylinux-x86_64-image = "manylinux_2_28"
# Skip unsupported platforms
skip = ["*_i686", "*-musllinux_*", "*-win32", "pp*", "cp36-*", "cp37-*", "cp38-*", "cp39-*", "cp310-*", "cp311-*"]

# Linux: Install gfortran and LAPACK/BLAS in the manylinux container
[tool.cibuildwheel.linux]
before-all = "dnf install -y gcc-gfortran openblas-devel lapack-devel"
environment = { CMAKE_BUILD_PARALLEL_LEVEL = "2" }

# macOS and Windows not supported
[tool.cibuildwheel.macos]
skip = "*"

[tool.cibuildwheel.windows]
skip = "*"

# ============================================================================
# code style configuration
# ============================================================================

[tool.black]
line-length = 179

[tool.ruff]
line-length = 179
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["compas", "compas_lmgc90"]
force-single-line = true
order-by-type = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I001"]
"tests/*" = ["I001"]
"tasks.py" = ["I001"]
"docs/examples/*.py" = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 179

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

# ============================================================================
# bumpversion configuration
# ============================================================================

[tool.bumpversion]
current_version = "0.1.5"
message = "Bump version to {new_version}"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "src/compas_lmgc90/__init__.py"
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "Unreleased"
replace = "[{new_version}] {now:%Y-%m-%d}"


